- finishing up motor translator implementations for default movements